# mod-workbench

./: .gitignore  README.md
dmm-parser-rust-only/: .gitattributes  .gitignore  Cargo.toml  Claude.MD  LICENSE_BRIEF.md  LICENSE_PRIOR_2026-05-01.txt  README.MD  WORK_SPLIT.md  pyproject.toml
dmm-parser-rust-only/docs/: 449_TABLE_CATALOG.md  ENFORCEMENT_PLAYBOOK.md  LICENSE_DRAFT_v1.md  NEXUSMODS_KIT.md  PARALLEL_LANES.md  STATUS.md  V3_1_RECOMMENDATION.md  api.md  effectdata-format.md  engine_havok_skinning.md
dmm-parser-rust-only/examples/: analyze_basedata.rs  condition_raw_count.rs  dmm_pamt_diag.rs  dump_dmmsa_pamt.rs  dump_papgt_order.rs  extract_all_pabgb.rs  extract_chart_xmls.rs  find_damian_files.rs  find_paseq_siblings.rs  find_player_chart_files.rs  find_vanilla_paseq.rs  find_vanilla_sublevel.rs  find_yamato_files.rs  game_condition_roundtrip.rs  gimmick_after_640.rs  gimmick_after_alt_body_896.rs  gimmick_after_f31_alt.rs  gimmick_after_f31_alt_128.rs  gimmick_after_f728.rs  gimmick_alt_after_name.rs  gimmick_alt_body_1152_check.rs  gimmick_alt_body_1536_check.rs  gimmick_alt_body_768_check.rs  gimmick_alt_body_896_check.rs  gimmick_alt_body_check.rs  gimmick_alt_dropoff.rs  gimmick_alt_saturation.rs  gimmick_blob_distribution.rs  gimmick_check_342_344.rs  (+43 more)
mod-workbench/: CHANGELOG.md  Cargo.toml  FILE_FORMAT_CATALOG.md  LICENSE.txt  PAI_FORMAT_RESEARCH.md  PALEVEL_PAMHC_PAB_FORMAT_RESEARCH.md  PAPPT_FORMAT_RESEARCH.md  PASCHEDULE_FORMAT_RESEARCH.md  PATAG_FORMAT_RESEARCH.md  ROADMAP.md  STATUS.md  WORKBENCH_EXPANSION_PLAN.md  build_release.bat
(+381 files in other folders)
