[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dmm-parser"
requires-python = ">=3.12"
dynamic = ["version"]
license = { file = "LICENSE" }
authors = [
    { name = "exodiaprivate-eng" },
    { name = "potter4208467 (Discord)" },
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
