[package]
name = "mod-workbench"
version = "0.1.0"
edition = "2021"

[dependencies]
dmm_parser_rust_only = { package = "dmm-parser-rust-only", path = "../dmm-parser-rust-only" }
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rfd = "0.15"
directories = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"
